# ooqp-dev

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  UMLdiagram.tex  main.cpp  ooqp-dev  ooqp-dev.pro
Abstract/: CMakeLists.txt  Data.h  DoubleLinearSolver.h  DoubleMatrix.h  DoubleMatrixHandle.h  DoubleMatrixTypes.h  IotrRefCount.h  LinearAlgebraPackage.h  LinearSystem.h  OoqpMonitor.h  ProblemFormulation.h  Residuals.h  Solver.cpp  Status.cpp  Variables.cpp
DenseLinearAlgebra/: CMakeLists.txt  DeSymIndefSolver.cpp  DeSymIndefSolver.h  DeSymPSDSolver.cpp  DeSymPSDSolver.h  DenseGenMatrix.cpp  DenseGenMatrix.h  DenseGenMatrixHandle.h  DenseLinearAlgebraPackage.cpp  DenseLinearAlgebraPackage.h  DenseStorage.cpp  DenseStorage.h  DenseSymMatrix.cpp  DenseSymMatrix.h  DenseSymMatrixHandle.h
QpExample/: CMakeLists.txt  QpExampleData.cpp  QpExampleData.h  QpExampleDense.cpp  QpExampleDense.h  QpExampleDenseLinsys.cpp  QpExampleDenseLinsys.h
QpGen/: CMakeLists.txt  QpGen.h  QpGenData.cpp  QpGenData.h  QpGenLinsys.cpp  QpGenLinsys.h  QpGenResiduals.cpp  QpGenResiduals.h  QpGenSparseLinsys.cpp  QpGenSparseLinsys.h  QpGenSparseMa27.cpp  QpGenSparseMa27.h  QpGenSparseMa57.cpp  QpGenSparseMa57.h  QpGenSparseSeq.cpp  QpGenSparseSeq.h  QpGenVars.cpp  QpGenVars.h
QpSolvers/: CMakeLists.txt  GondzioSolver.cpp  GondzioSolver.h  MehrotraSolver.cpp  MehrotraSolver.h
Readers/: CMakeLists.txt  hash.cpp
SparseLinearAlgebra/: CMakeLists.txt  SparseGenMatrix.cpp  SparseGenMatrix.h  SparseGenMatrixHandle.h  SparseLinearAlgebraPackage.cpp  SparseLinearAlgebraPackage.h  (+6 more)
(+114 files in other folders)
